--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-11</title>
     <script src="https://use.fontawesome.com/91c3a9fc42.js"></script>
-    <link rel="stylesheet" href="class.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="main-content">
